--- a/src/kwd.BoxOBlazor.Demo/Web/css/site.less
+++ b/src/kwd.BoxOBlazor.Demo/Web/css/site.less
@@ -3,6 +3,8 @@
 @import "./site/sidebar";
 @import "./site/circuitError";
 
+@import "../../Parts/ColorPicker.less";
+
 body{
 	background-color: var(--main-bg-color);
 }
