--- a/src/ForServer/Pages/Shared/_Nav.cshtml
+++ b/src/ForServer/Pages/Shared/_Nav.cshtml
@@ -14,6 +14,12 @@
             </a>
         </li>
         <li class="nav-item px-3">
+            <a href="~/Tiles" class="nav-link">
+                <span class="oi oi-home" aria-hidden="true"></span>
+                Tile UI
+            </a>
+        </li>
+        <li class="nav-item px-3">
             <a href="~/Spa" class="nav-link">
                 <span class="oi oi-loop" aria-hidden="true"></span>
                 Blazor SPA
