Move site to be primarily a blazor spa; tile-shell layout.

--- a/src/ForServer/Web/css/forServer.less
+++ b/src/ForServer/Web/css/forServer.less
@@ -1,5 +1,7 @@
 ﻿@svr-main-color: #b15714;
 @import "../../Pages/Shared/_ConnectionStatus";
+@import "../../Pages/Shared/_CircuitError.less";
+@import "../../Pages/Migration/Migration.less";
 
 :root {
 	--main-bg-color: @svr-main-color;
