--- a/src/ForServer/Pages/Demo/Index.cshtml
+++ b/src/ForServer/Pages/Demo/Index.cshtml
@@ -1,13 +1,38 @@
 ﻿@page
+@using ForServer.Tiles
+@{
+    Layout = null;
+}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BoxOBlazor - ForServer</title>
+    <base href="~/" />
 
-<p>
-    These demo pages are razor pages, with hosted blazor 
-    components. 
-</p>
-<p>
-    This component based approach provides a 
-    migration path from current 
-    <a href="https://docs.microsoft.com/en-us/aspnet/core/?view=aspnetcore-3.1">asp.net</a>
-    project 
-    to more interactive project with blazor.
-</p>
+    <script src="_framework/blazor.server.js" defer></script>
+
+    @*My fonts*@
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    
+    @*Grab iconic from common lib*@
+    <link href="_content/kwd.BoxOBlazor.Demo/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    
+    @*My fa icons*@
+    <script src="https://kit.fontawesome.com/fabf6a7a00.js" crossorigin="anonymous"></script>
+    
+    @*styling for tile layout*@
+    <link href="css/tiles.css" type="text/css" rel="stylesheet"/>
+    
+    @*Site styles*@
+    <link href="css/forServer.css" type="text/css" rel="stylesheet" />
+    
+</head>
+<body class="shell-wrap">
+    <component type="typeof(ShellApp)" render-mode="ServerPrerendered" />
+    <partial name="Shared/_CircuitError" />
+    <partial name="Shared/_ConnectionStatus" />
+</body>
+</html>
