--- a/src/ForServer/Pages/Shared/_Layout.cshtml
+++ b/src/ForServer/Pages/Shared/_Layout.cshtml
@@ -1,32 +1,55 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<base href="~/" />
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>BoxOBlazor - For Server</title>
+    <base href="~/" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BoxOBlazor - For Server</title>
 
-	<script src="~/_framework/blazor.server.js" defer></script>
-    
-    <partial name="_BoxOBlazorAssets"/>
+    <script src="~/_framework/blazor.server.js" defer></script>
+
+    @*Assets from share library*@
+    <link href="_content/kwd.BoxOBlazor.Demo/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor.Demo/css/site.css" rel="stylesheet" />
+    <script src="_content/kwd.BoxOBlazor.Demo/util.js" defer></script>
 
     <link href="css/forServer.css" rel="stylesheet" />
 
-    @await RenderSectionAsync("Head", false)
-</head>
-<body style="display: flex; flex-direction: row; position: relative;">
-<partial name="_ConnectionStatus"/>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            padding: 1em .25em;
+        }
 
-<div class="sidebar">
-    <partial name="_Nav"/>
-</div>
+        nav {
+            height: 2em;
+            background-color: bisque;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+            nav a {
+                line-height: 2em;
+            }
+
+        main {
+            flex-grow: 1;
+        }
+    </style>
+
+    @await RenderSectionAsync("Head", false)
+
+</head>
+<body>
+<nav>
+    <a href="~/">Home</a>
+</nav>
 <main class="main">
-    <div class="top-row px-4">
-        Razor hosting blazor.
-    </div>
-    <div class="content px-4">
-        @RenderBody()
-    </div>
+    @RenderBody()
 </main>
+<partial name="_ConnectionStatus" />
+<partial name="_CircuitError"/>
 </body>
 </html>
