--- a/src/ForServer/Pages/_Host.cshtml
+++ b/src/ForServer/Pages/_Host.cshtml
@@ -1,41 +1,38 @@
 ﻿@page
-@using ForServer.Pages.Spa.Shared
+@using ForServer.Tiles
 @namespace ForServer.Pages
-@{
-    Layout = null;
-}
+@{Layout = null;}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="~/" />
+
 	<title>BoxOBlazor - ForServer</title>
-	<base href="~/" />
 
 	<script src="_framework/blazor.server.js" defer></script>
 
-	<link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-	<link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
-
-	<link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
+    @*My fonts*@
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     
-	<link href="css/forServer.min.css" rel="stylesheet" />
+    @*Assets from common lib*@
+    <partial name="Shared/_BoxOBlazorAssets"/>
+    
+    @*My fa icons*@
+    <script src="https://kit.fontawesome.com/fabf6a7a00.js" crossorigin="anonymous"></script>
+    
+    @*styling for tile layout*@
+    <link href="css/tiles.css" type="text/css" rel="stylesheet"/>
+    
+    @*Site styles*@
+    <link href="css/forServer.css" type="text/css" rel="stylesheet" />
 </head>
-<body>
-    <app>
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
-    </app>
-
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
+<body class="shell-wrap">
+<component type="typeof(App)" render-mode="ServerPrerendered" />
+<partial name="Shared/_CircuitError" />
+<partial name="Shared/_ConnectionStatus" />
 </body>
 </html>
