Fix: label for up-time on server app

--- a/src/ForServer/Pages/Demo/AlarmClock.razor
+++ b/src/ForServer/Pages/Demo/AlarmClock.razor
@@ -7,7 +7,7 @@
     component.
 </p>
 
-<UpTime />
+<UpTime UpTimeLabel="Server app up-time" />
 
 @code {
     public const string Path = "demo/AlarmClock";
