Update packages, convert to docker; convert to webcompiler

--- a/src/ForBrowser/Pages/Index.razor
+++ b/src/ForBrowser/Pages/Index.razor
@@ -12,7 +12,7 @@ Welcome to @config["Title"].
 {
     <p>
         There is also a demo using
-        blazor spa (server side)
+        blazor (server side)
         <a href="@siteConfig.ForServerSite">here</a>.
     </p>
 }
