--- a/src/ForBrowser/Shared/NavMenu.razor
+++ b/src/ForBrowser/Shared/NavMenu.razor
@@ -1,6 +1,5 @@
-﻿@using Microsoft.Extensions.Configuration
-@using ForBrowser.Services
-@inject ServerAssets Assets;
+﻿@using ForBrowser.Services
+@using DemoAssets = kwd.BoxOBlazor.Demo.Assets
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">ForBrowser</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -30,7 +29,7 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="demo/AlarmClock">
                 <div class="oi linkIcon">
-                    <img class="icon" src="@Assets.ClockImg" aria-hidden="true" />
+                    <img class="icon" src="@DemoAssets.Img.AlarmClock" aria-hidden="true" />
                 </div>
                 Alarm Clock
             </NavLink>
@@ -38,7 +37,7 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="demo/LogView">
                 <div class="oi linkIcon">
-                    <img class="icon" src="@imgLog" aria-hidden="true" />
+                    <img class="icon" src="@DemoAssets.Img.Log" aria-hidden="true" />
                 </div>
                 Log View
             </NavLink>
