--- a/src/ForServer/Pages/_Imports.razor
+++ b/src/ForServer/Pages/_Imports.razor
@@ -7,8 +7,11 @@
 @using Microsoft.JSInterop
 
 @using Microsoft.Extensions.Logging
+@using Microsoft.Extensions.Options
 
 @using ForServer
+@using ForServer.Model
 @using ForServer.Pages.Parts
 @using ForServer.Tiles
+
 @using kwd.BoxOBlazor.Demo.Parts;
