--- a/src/ForServer/Tiles/Tiles.scss
+++ b/src/ForServer/Tiles/Tiles.scss
@@ -1,4 +1,4 @@
-﻿@import "var.less";
+﻿@import "./var";
 
 //size the document.
 html,body {
@@ -9,14 +9,14 @@ html,body {
     border-width:0;
 }
 
-@color-0: #3a0647;
-@color-1: #052767;
+$color-0: #3a0647;
+$color-1: #052767;
 
-@color-2: #faebd7;
-@color-3: #116DEB;
+$color-2: #faebd7;
+$color-3: #116DEB;
 
-@color-4: #efefef ;
-@color-5: rgba(239,239,239,1) ;
+$color-4: #efefef ;
+$color-5: rgba(239,239,239,1) ;
 
 .shell-wrap {
     padding: 1em 4px;
@@ -26,9 +26,9 @@ html,body {
     height: calc(100% - 2em);
     overflow-x: hidden;
 
-    @color-0-outer: lighten(@color-0, 50%);
-    @color-1-outer: lighten(@color-1, 50%);
-    background: linear-gradient(0deg, @color-0-outer 0%, @color-1-outer 100%);
+    $color-0-outer: lighten($color-0, 50%);
+    $color-1-outer: lighten($color-1, 50%);
+    background: linear-gradient(0deg, $color-0-outer 0%, $color-1-outer 100%);
 
     > .shell {
         min-height: 100%;
@@ -39,33 +39,33 @@ html,body {
 
 .tile-nav {
 
-    @nav-height: 30px;
-    @callout-font-size: 15px;
+    $nav-height: 30px;
+    $callout-font-size: 15px;
 
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
     font-family: Rage;
-    font-size: @callout-font-size;
-    height: @nav-height;
-    background-color: lighten(@color-0, 7%);
+    font-size: $callout-font-size;
+    height: $nav-height;
+    background-color: lighten($color-0, 7%);
 
     a.button {
-        @border-width: 2px;
-        @padding-tb: 1px;
+        $border-width: 2px;
+        $padding-tb: 1px;
 
         display: inline-block;
         text-align: center;
         text-decoration: none;
         color: black;
-        background: linear-gradient(0deg, @color-4 0%, @color-5 100%);
+        background: linear-gradient(0deg, $color-4 0%, $color-5 100%);
         padding: 1px 6px;
-        border-width: @border-width;
+        border-width: $border-width;
         border-style: outset;
         border-color: #c3c3c3;
         font-family: sans-serif;
-        line-height: @nav-height - 2*@border-width - 2*@padding-tb;
+        line-height: $nav-height - 2*$border-width - 2*$padding-tb;
         transition: background 250ms ease-in-out, transform 150ms ease;
         cursor: default;
         opacity: .2;
@@ -103,8 +103,8 @@ html,body {
 .desk {
     flex-grow: 1;
     padding: .2em 1em;
-    color: @color-4;
-    background-image: linear-gradient(0deg, @color-0 0%, @color-1 100%);
+    color: $color-4;
+    background-image: linear-gradient(0deg, $color-0 0%, $color-1 100%);
 
     .tileLayout {
         display: flex;
@@ -124,8 +124,8 @@ html,body {
     /*fit 3 along row; given min window width of 500px*/
     width: calc(500px/3 - 2em); /*2em = 4*.5, the inter card spaces*/
     height: 10em;
-    background-color: @color-2;
-    color: @color-3;
+    background-color: $color-2;
+    color: $color-3;
     border: 2px solid black;
     text-align: center;
     overflow-wrap: break-word;
