k8 reverse proxy Config. Add host -based config for browser-app.

--- a/src/kwd.BoxOBlazor.Browser.Host/Pages/_Host.cshtml
+++ b/src/kwd.BoxOBlazor.Browser.Host/Pages/_Host.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @using kwd.BoxOBlazor.Hosting.Util
 @*This is a copy of index.html from the razor app.
-Use this so server gets chance for some updates*@
+  Use this so server gets chance for some updates,
+    in particular the base url needs to be set.*@
 <!DOCTYPE html>
 <html>
 <head>
