--- a/src/kwd.BoxOBlazor.Server/Pages/About.cshtml
+++ b/src/kwd.BoxOBlazor.Server/Pages/About.cshtml
@@ -3,3 +3,16 @@
     Layout = "Shared/_LayoutNoBlazor";
 }
 <component type="@typeof(About)" render-mode="Static"/>
+
+<section>
+    <h3>About about</h3>
+    <p>
+        Some pages, such as this one,
+        represent mixing a blazor component, inside of a standard server-side razor page.
+    </p>
+    <p>
+        Whilst other pages, such as the 
+        <a href="./">Home</a> tile layout present a rich blazor component as the main body of the page.
+    </p>
+
+</section>
