--- a/src/kwd.BoxOBlazor.Server/Pages/Index.razor
+++ b/src/kwd.BoxOBlazor.Server/Pages/Index.razor
@@ -43,7 +43,7 @@
         </Tile>
 
         <Tile Title="Alarm clock"
-              Description="Demo richer blazor updates as a simple color tool"
+              Description="Demo client preiodic events"
               OpenUrl="@($"{DemoPath}/AlarmClock")"
               IconUrl="@DemoAssets.Img.AlarmClock">
         </Tile>
