--- a/src/kwd.BoxOBlazor.Server/Pages/Parts/About.razor
+++ b/src/kwd.BoxOBlazor.Server/Pages/Parts/About.razor
@@ -10,9 +10,9 @@
     <a href="https://github.com/Dkowald/kwd.BoxOBlazor">GitHub - BoxOBlazor</a>
 </p>
 <p>
-    The site is also deployed to a little linux box on azure,
-    <a href="https://boxoblazor.kwd.space/">here</a>.
+    This is the blazor server render version of the site.
 </p>
+
 @code {
 
 }
