--- a/src/kwd.BoxOBlazor.Server/Pages/Demo/Index.cshtml
+++ b/src/kwd.BoxOBlazor.Server/Pages/Demo/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
 @using kwd.BoxOBlazor.Server.Tiles
-@using kwd.BoxOBlazor.Hosting.Util
 @{
     Layout = null;
 }
@@ -10,7 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BoxOBlazor - ForServer</title>
-    <base href="@Request.GetBaseURL()" />
+    <base href="@Request.GetBaseUrl()" />
 
     <script src="_framework/blazor.server.js" defer></script>
 
