--- a/src/kwd.BoxOBlazor.Server/Pages/_Host.cshtml
+++ b/src/kwd.BoxOBlazor.Server/Pages/_Host.cshtml
@@ -1,6 +1,5 @@
 ﻿@page
 @using kwd.BoxOBlazor.Server.Pages
-@using kwd.BoxOBlazor.Hosting.Util
 @{Layout = null;}
 
 <!DOCTYPE html>
@@ -8,7 +7,7 @@
 <head>
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="@Request.GetBaseURL()" />
+    <base href="@Request.GetBaseUrl()" />
 
 	<title>BoxOBlazor - ForServer</title>
 
