--- a/src/kwd.BoxOBlazor.Server/Pages/_ViewImports.cshtml
+++ b/src/kwd.BoxOBlazor.Server/Pages/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using kwd.BoxOBlazor.Server.Pages.Parts
 
 @using kwd.BoxOBlazor.Demo.Parts
+@using kwd.WebCore.Util;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
