--- a/src/kwd.BoxOBlazor.Server/Pages/Shared/_LayoutNoBlazor.cshtml
+++ b/src/kwd.BoxOBlazor.Server/Pages/Shared/_LayoutNoBlazor.cshtml
@@ -1,9 +1,8 @@
 ﻿@using kwd.BoxOBlazor.Demo
-@using kwd.BoxOBlazor.Hosting.Util
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="@Context.Request.GetBaseURL()" />
+    <base href="@Context.Request.GetBaseUrl()" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BoxOBlazor - For Server</title>
